Fixed formatting issues on mobile devices

--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ button{
 
 #about{
   background-color: #393939;
+  padding-left: 18%;
+  padding-right: 18%;
 }
 
 #abouttext{
